--- a/package.json
+++ b/package.json
@@ -8,14 +8,15 @@
     "build": "tsc -b && vite build",
     "lint": "eslint . && npm run i18n:check",
     "preview": "vite preview",
-    "i18n:check": "i18n-check --locales public/locales -s en -f i18next"
+    "i18n:check": "i18n-check --locales src/assets/locales -s en -f i18next"
   },
   "dependencies": {
     "i18next": "^25.3.2",
     "i18next-browser-languagedetector": "^8.2.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-i18next": "^15.6.1"
+    "react-i18next": "^15.6.1",
+    "react-router": "^7.7.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
