--- a/package.json
+++ b/package.json
@@ -11,12 +11,19 @@
     "i18n:check": "i18n-check --locales src/assets/locales -s en -f i18next"
   },
   "dependencies": {
+    "@heroui/react": "^2.8.1",
+    "@reduxjs/toolkit": "^2.8.2",
+    "@tailwindcss/vite": "^4.1.11",
+    "framer-motion": "^12.23.9",
     "i18next": "^25.3.2",
     "i18next-browser-languagedetector": "^8.2.0",
+    "lucide-react": "^0.525.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-i18next": "^15.6.1",
-    "react-router": "^7.7.1"
+    "react-redux": "^9.2.0",
+    "react-router": "^7.7.1",
+    "tailwindcss": "^4.1.11"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
